--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/Finisher.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/Finisher.cshtml
@@ -1796,7 +1796,6 @@
 
     function OptionsSelect(idBlock, TypeSylinder, id, optionsValue, elemNum, OptionsName, N,count) 
     {
-
         let costItems = document.getElementById("costItems-" + idBlock);
 
         let countSchluss = document.getElementById("countSchlusse-" + count);
@@ -1810,6 +1809,7 @@
         let TotalOptions = document.getElementById("OptionAll-" + idBlock);
 
         let AllSelectro = BlockTur.querySelectorAll("select");
+
         let selectedOption = Selector.options[Selector.selectedIndex].id;
 
         QueryNameOptions.forEach((item)=>
@@ -1821,36 +1821,8 @@
                 {
                     item.value = '\u2713' + OptionsName;
                     item.style.color = "green";
-                    if (item.value === '\u2713' + "Freilauffunktion" || item.value === '\u2713' + "Freilauf") 
-                    {
-                        hasFreilauffunktion = true;
-
-                        if (item.value === '\u2713' + "Freilauffunktion" && hasFreilauffunktion === true && hasNotUndGefahrenfunktion === true || item.value === '\u2713' + "Freilauf" && hasFreilauffunktion === true && hasNotUndGefahrenfunktion === true) {
-                            for (let i = 0;i <QueryNameOptions.length; i++) 
-                            {
-                                if (QueryNameOptions[i].value === '\u2713' + "Not- und Gefahrenfunktion" || QueryNameOptions[i].value === '\u2713' + "NGF") 
-                                {
-                                    let OptionOldCheker = document.getElementById(`d-${idBlock} + ${i}`);
-
-                                    costItems.value = parseFloat(costItems.value) - (OptionOldCheker.value);
-
-                                    AllPrice.value = (parseFloat(AllPrice.value) - (OptionOldCheker.value * Number(countSchluss.value)));
-                                    QueryNameOptions[i].value = QueryNameOptions[i].defaultValue;
-                                    QueryNameOptions[i].style.color = "black";
-
-                                    let regex = item.defaultValue;
-
-                                    TotalOptions.value = TotalOptions.value.replace(regex + ':  JA, ', '');
-
-                                    var chekedSelect = document.getElementById(idBlock + "-Options-" + i);
-                                    chekedSelect.value = "Nein";
-                                    hasFreilauffunktion == false;
-                                }
-                                
-                            }
-                        }
-                    }
-                    else if (item.value === '\u2713' + "Not- und Gefahrenfunktion" || item.value === '\u2713' + "NGF") {
+                   
+                   if (item.value === '\u2713' + "Not- und Gefahrenfunktion" || item.value === '\u2713' + "NGF") {
                         hasNotUndGefahrenfunktion = true;
                         
                         if (item.value === '\u2713' + "Not- und Gefahrenfunktion" && hasFreilauffunktion === true && hasNotUndGefahrenfunktion === true || item.value === '\u2713' + "NGF" && hasFreilauffunktion === true && hasNotUndGefahrenfunktion === true) 
@@ -1879,7 +1851,33 @@
                             
                         }
                     }
-                   
+                    if (item.value === '\u2713' + "Freilauffunktion" || item.value === '\u2713' + "Freilauf") 
+                    {
+                        hasFreilauffunktion = true;
+
+                        if (item.value === '\u2713' + "Freilauffunktion" && hasFreilauffunktion === true && hasNotUndGefahrenfunktion === true || item.value === '\u2713' + "Freilauf" && hasFreilauffunktion === true && hasNotUndGefahrenfunktion === true) {
+                            for (let i = 0; i < QueryNameOptions.length; i++) {
+                                if (QueryNameOptions[i].value === '\u2713' + "Not- und Gefahrenfunktion" || QueryNameOptions[i].value === '\u2713' + "NGF") {
+                                    let OptionOldCheker = document.getElementById(`d-${idBlock} + ${i}`);
+
+                                    costItems.value = parseFloat(costItems.value) - (OptionOldCheker.value);
+
+                                    AllPrice.value = (parseFloat(AllPrice.value) - (OptionOldCheker.value * Number(countSchluss.value)));
+                                    QueryNameOptions[i].value = QueryNameOptions[i].defaultValue;
+                                    QueryNameOptions[i].style.color = "black";
+
+                                    let regex = item.defaultValue;
+
+                                    TotalOptions.value = TotalOptions.value.replace(regex + ':  JA, ', '');
+
+                                    var chekedSelect = document.getElementById(idBlock + "-Options-" + i);
+                                    chekedSelect.value = "Nein";
+                                    hasFreilauffunktion == false;
+                                }
+
+                            }
+                        }
+                    }
 
                     if (TypeSylinder === "Doppel") 
                     {
