--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/wwwroot/css/site.css
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/wwwroot/css/site.css
@@ -137,7 +137,7 @@
     width: 200px;
 }
 #countTurSelect {
-    margin-left: 10px;
+    transform: scale(0.7);
     outline: none;
 }
 
@@ -170,6 +170,10 @@
 
 @media(max-width:900px) and (orientation: portrait) 
 {
+    #position{
+        width:25px;
+    }
+
     #countTurSelect {
         transform: scale(0.7);
         outline: none;
@@ -357,6 +361,10 @@
         float: left;
         text-align: center;
     }
+    #counterTur > img{
+        height:10px;
+        width:10px;
+    }
     .modalI {
         display: none;
         position: fixed;
@@ -479,7 +487,7 @@
         display: flex;
         transform: scale(0.5);
         margin-left: -45px;
-        gap:10px;
+        gap:5px;
     }
     #InformBar {
         margin-top: 30px;
